add logo and new gradient for homepage

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 
 <body>
     <div class="header">
-        <img src="home_screen.jpg" alt="Home Screen Image">
+         <img src="home_screen.jpg" alt="Home Screen Image">
     </div>
     <div class="main">
-            <p> Autograph Collector </p>
+            <h1> Autograph Collector </h1>
+            <p> The place where you post, see and sell autographs. </p>
             <button onclick="window.location.href = 'login.html';">Go to login page</button>
     </div>
     <div class="footer">
         <footer>
-            <p>Authors: Dima Mihai, Iacob Denisa, Jitarasu Catalina </p>
+            <p> Authors: Dima Mihai, Iacob Denisa, Jitarasu Catalina </p>
+            <p> &copy; 2022 </p>
         </footer>        
     </div>
     
