--- a/Fereasta3/fereastra.html
+++ b/Fereasta3/fereastra.html
@@ -12,9 +12,9 @@
 
 <nav>
     <div class="nav-left"> 
-        <img src="images/logo.jpg" class="logo">
+        <img src="images/logo.png" class="logo">
         <ul>
-            <li><img src="images/nou.png"></li>
+            <li><img src="images/notificari.png"></li>
            <!-- <li><img src="images/myaccount.jpg"></li> -->
             <li><img src="images/home.png"></li>
         </ul>
@@ -25,25 +25,46 @@
               <input type="text" placeholder="Search">
          </div>
 
-         <div class="nav-user-icon">
+         <div class="nav-user-icon" onclick="menuSettings()">
              <img src="images/myaccount.jpg">
          </div>
     </div>
+
+    <!-------------settings-menu----------------->
+    <div class="settings-menu">
+        <div class="settings-menu-inner">
+          <div class="user-profile">
+              <img src="images/seeAccount.png" class="seeAcount-icon" >
+              <a href="#">See your profile</a>
+          </div>
+          <hr>
+          <div class="settings-links">
+              <img src="images/logout.png" class="logout-icon">
+              <a href="#">Logout <img src="images/arrow.png" width="6px"></a>
+          </div>
+        </div>
+    </div>
+
 </nav>
 
 <div class="container">
+    <!------------------left-sidebar------------------->
      <div class="left-sidebar">
-
+           <div class="imp-links">
+               <a href="#"><img src="images/marketplace.png"> Marketplace </a>
+               <a href="#"><img src="images/grup.png"> Group </a>
+               <a href="#"><img src="images/top.webp"> Ranking </a>
+            </div>
      </div>
-
+    <!------------------main-content------------------->
      <div class="main-content">
 
      </div>
-
+    <!-------------------right-sidebar----------------->
      <div class="right-sidebar">
 
      </div>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
