--- a/Documentatie.html
+++ b/Documentatie.html
@@ -48,8 +48,8 @@
             </span>
             <ul>
               <li property="schema:roleContactPoint" typeof="schema:ContactPoint">
-                <a href="mailto:jholland@umich.edu"
-                   property="schema:email">jholland@umich.edu</a>
+                <a href="mailto:denisa.iacob@info.uaic.ro"
+                   property="schema:email">denisa.iacob@info.uaic.ro</a>
               </li>
             </ul>
           </li>
