--- a/login.html
+++ b/login.html
@@ -4,51 +4,49 @@
         <link rel="stylesheet" href="style.css">
     </head>
  <body>
-     <div class="hero">
-         <div class="form-box">
-            <div class="button-box">
-                <div id="btn"> </div>
-                <button type="button" class="toggle-btn" unclick="login()">Log In</button>
-                <button type="button" class="toggle-btn" unclick="register()">Register</button>
-            </div>
-            <div class="social-icons">
+<div class="hero">
+   <div class="form-box">
+             <div class="button-box">
+                 <div id="btn" ></div>
+                <button type="button" class="toggle-btn" onclick="login()">Log In</button>
+                <button type="button" class="toggle-btn" onclick="register()">Register</button>
+             </div>
+             <div class="social-icons">
                 <img src="logo.png">
             </div>
             <form id="login" class="input-group">
-                <input type="text" class="input-field" placeholder="User Id" required>
-                <input type="text" class="input-field" placeholder="Enter Password" required>
-                <input type="checkbox" class="check-box"><span>Remember Password</span>
-                <button type="submit" class="submit-btn">Log In</button>
+                <input type="text" class="input-field" placeholder="User Id" required> 
+                <input type="password" class="input-field" placeholder="Enter Password" required> 
+                <input type="checkbox" class="chech-box"><span>Remember Password</span>
+                <button type="submit" class="submit-btn" onclick="window.location.href = 'index.html';">Log in</button>
             </form>
             <form id="register" class="input-group">
-                <input type="text" class="input-field" placeholder="User Id" required>
-                <input type="email" class="input-field" placeholder="Email Id" required>
-                <input type="text" class="input-field" placeholder="Enter Password" required>
-                <input type="checkbox" class="check-box"><span>I agree to the terms & conditions </span>
+                <input type="text" class="input-field" placeholder="User Id" required> 
+                <input type="email" class="input-field" placeholder="Email Id" required> 
+                <input type="password" class="input-field" placeholder="Enter Password" required>
+                <input type="password" class="input-field" placeholder="Confirm Password" required> 
+                <input type="checkbox" class="chech-box"><span>I agree to the terms & conditions</span>
                 <button type="submit" class="submit-btn">Register</button>
             </form>
-
-        </div>
     </div>
+</div>
     <script>
         var x=document.getElementById("login");
         var y=document.getElementById("register");
         var z=document.getElementById("btn");
-        function register();
+        function register()
         {
             x.style.left="-400px";
             y.style.left="50px";
             z.style.left="110px";
         }
-        function login();
+        function login()
         {
             x.style.left="50px";
             y.style.left="450px";
-            z.style.left="0px";
+            z.style.left="0";
         }
-
-        </script>
-
+    </script>
 </body>
 </html>
 
