--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
                 <input type="text" class="input-field" placeholder="User Id" required> 
                 <input type="password" class="input-field" placeholder="Enter Password" required> 
                 <input type="checkbox" class="chech-box"><span>Remember Password</span>
-                <button type="submit" class="submit-btn" onclick="window.location.href = 'index.html';">Log in</button>
+                <button type="submit" class="submit-btn" >Log in</button>
             </form>
             <form id="register" class="input-group">
                 <input type="text" class="input-field" placeholder="User Id" required> 
