--- a/Documentatie.html
+++ b/Documentatie.html
@@ -78,20 +78,21 @@
   <h2>1. Introducere</h2>
     <section id="sections1" role="doc-introduction-sections">
       <h3>1.1 Scop</h3>
-      <p>Acest document are rolul de a prezenta aplicatia, impreuna cu functionalitatile ei, scopul pentru care a fost creata.</p> 
+      <p>Acest document a fost creat cu rolul de a oferi informatii despre proiectul "Autograph Collector", realizat in materiei Tehnologii WEB, Facultatea de Informatica, 2022.</p> 
     
       <h3>1.2 Conventii ale documentului</h3>
-      <p>---</p>
+      <p>Va urma...</p>
 
       <h3>1.3 Publicul vizat</h3>
-      <p>Documentul este destinat celor ce vor evalua aplicatia si functionalitatea sa, dar si oricarei persoane interesate de constructia aplicatiei.</p>
+      <p>Documentul este destinat profesorilor ce vor evalua acest proiect impreuna cu functionalitatile lui, dar si oricarei persoane interesate de constructia aplicatiei.</p>
 
       <h3>1.4 Domeniul de aplicare al produsului</h3>
-      <p>Aplicatia WEB "Autograph Collector" are scopul de a oferi un mediu in care oamenii sa isi poata posta autografele obtinute in diferite circumstante
-        si de la diferite personalitati (scriitori, vedete, etc.), dar si un marketplace in care isi pot pune in vanzare autografele sau sa poata cumpara altele</p>
+      <p>Aplicatia WEB "Autograph Collector" are scopul de a crea o interfata digitala, usor de folosit de catre toti utilizatorii, iar cei interesati sa isi poata 
+        stoca autografele obtinute in diferite circumstante si de la diferite personalitati (scriitori, vedete, etc.) si care ulterior vor fi sortate pe categorii pentru a simplifica cautarile.
+        O alta facilitate a aplicatiei este marketplace-ul in care cine doreste isi pot pune in vanzare autografele sau poate cumpara altele.</p>
 
       <h3>1.5 Referinte</h3>
-      <p>???</p>
+      <p>Va urma...</p>
     </section>
 </section>
 <section id="ovarall-description" role="app-description">
@@ -112,7 +113,9 @@
         </ul>
       </div>
       <h3>2.3 Clasele si caracteristicile utilizatorilor </h3>
-      <p> Aplicatia este destinata oricarei persoane care doreste sa impartaseasca cu alti oameni colectia sa de autografe.</p>
+      <p> Aplicatia este destinata oricarei persoane va fi interesanta, insa principalii utilizatori anticipam ca vor fi colectionarii de autografe.
+        Un utilizator nu trebuie sa indeplineasca anumite caracteristici pentru a putea folosi platforma, putand fi folosita si doar in scop informativ, fara a fi fortati sa aiba propriile postari.
+        </p>
       <h3>2.4 Mediul de operare</h3>
       <p>Aplicatia va fi disponibila atat pe dispozitive de tip desktop cat si dispozitive mobile, in orice browser ce suporta HTML5. </p>
       <h3>2.5 Constrangeri de proiectare si implementare</h3>
