--- a/myAccount.html
+++ b/myAccount.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Autograph Collector/Profile</title>
-<link rel="stylesheet" href="style.css" >
+<link rel="stylesheet" href="stylepg.css" >
 </head>
 <body>
 
@@ -15,8 +15,7 @@
         <img src="images/logo.png" class="logo">
         <ul>
             <li><img src="images/notificari.png"></li>
-           <!-- <li><img src="images/myaccount.jpg"></li> -->
-            <li><img src="images/home.png"></li>
+            <li><img src="images/home.png" onclick="window.location.href = 'autographCollector.html';"></li> 
         </ul>
     </div>
     <div class="nav-right">
