--- a/myAccount.html
+++ b/myAccount.html
@@ -39,7 +39,7 @@
           <hr>
           <div class="settings-links">
               <img src="images/logout.png" class="logout-icon">
-              <a href="#">Logout <img src="images/arrow.png" width="6px"></a>
+              <a href="#"  onclick="window.location.href = 'login.html';">Logout <img src="images/arrow.png" width="6px"></a>
           </div>
         </div>
     </div>
