--- a/Documentatie.html
+++ b/Documentatie.html
@@ -100,16 +100,37 @@
     <section id="sections2" role="overall-description-sections">
       <h3>2.1 Perspectiva produsului</h3>
       <p>'Autograph Collector' este o aplicatie gandita sa ruleze pe browsere, avand ca scop conectarea intr-o retea a colectionarilor de autografe.</p>
+      <br> Aplicația se va deschide într-o pagină de prezentare, de unde putem accesa pagina de login/register, unde se face va face autentificarea.
+          Verificarea datelor introduse de către persoane, se va face cu ajutorul unei baze de date în care vor fi stocate datele tuturor utilizatorilor înregistrați. 
+          Dacă datele introduse la login vor fi corecte, vom ajunge pe pagina principală a aplicației.</p>
+          <p>Bara de activități a paginii principale conție: </p>
+          <ul>
+            <li>un buton de vizualizare notificări</li>
+            <li> un buton de home ce ne va întoarce la pagina principală</li>
+            <li> o bară de căutare </li>
+            <li> o pictogramă my account care va deschide un alt meniu de unde putem vizualiza profilul, sau putem face logout.</li>
+          </ul>
+          <p>Meniul din stânga paginii principale conține:</p>
+          <ul>
+            <li>Marketplace - unde vom putea regăsi toate autografele ce pot fi cumpărate</li>
+            <li>Group - aici putem accesa toate autografele pe categorii (ex:sport, politică) </li>
+            <li>Ranking - oferă un clasament pe categorii al autografelor</li>
+          </ul>
+          <p>Pe profilul personal vom putea vedea toate autografele postate.</p>
+          <p>Pentru a încadra un autograf postat la o categorie ne vom folosi de niște tag-uri, ce utilizatorul va trebui să le pună în momentul 
+            în care va realiza postarea. Toate postările vor fi stocate într-o bază de date. </p>
       <h3>2.2 Functiile produsului </h3>
       <div>
         <p>Utilizatorul va avea urmatoarele functionalitati in cadrul aplicatiei:</p>
         <ul>
-          <li> sa isi creeze cont;</li>
-          <li> sa se conecteze la un cont deja existent;</li>
-          <li> sa posteze noi autografe;</li>
-          <li> sa stearga autografe; </li>
-          <li> sa isi puna autografe la vanzare;</li>
-          <li> sa cumpere autografe.</li>
+          <li> să îsi creeze cont;</li>
+          <li> să se conecteze la un cont deja existent;</li>
+          <li> să posteze noi autografe;</li>
+          <li> să șteargă autografe; </li>
+          <li> să vândă autografe;</li>
+          <li> să cumpere autografe;</li>
+          <li>să vizualizeze autografe postate de către alți utilizatori;</li>
+          <li>să descarce în format RSS, CSV si PDF clasamente ale autografelor pe categorii.</li>
         </ul>
       </div>
       <h3>2.3 Clasele si caracteristicile utilizatorilor </h3>
@@ -133,8 +154,8 @@
     <p> Prima pagina este una introductiva, in care familiarizam utilizatorul cu scopul aplicatiei. In aceasta pagina vom avea un buton care 
       ne va duce in pagina de login/ sign-up.</p>
     <p> Pagina de login ofera utilizatorului optiunea de a se conecta sau de a crea un cont nou. </p>
-    <p> Dupa conectare, utilizatorul este redirectionat in pagina profilului sau, de aici avand posibilitatea de a alege, folosind meniul din stanga,
-       sa vada clasamentul colectionarilor, marketplaceul, sau grupurile din care face parte.</p>
+    <p> Dupa conectare, utilizatorul este redirectionat in pagina principală, de aici avand posibilitatea de a alege unde dorește să navigheze, folosindu-se
+        de meniu,dar și de bara de activități.</p>
     <h3>3.2 Interfete hardware</h3>
     <p> Urmarim ca programul sa functioneze pe orice sistem( desktop, mobile).</p>
     <h3>3.3 Interfete software</h3>
