--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="Autograph Collector">
-        <meta name="keywords" content="Autograph, Collector">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Autograph Collector
-        </title>
-        <link rel="stylesheet" href="homeStyle.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Autograph Collector">
+    <meta name="keywords" content="Autograph, Collector">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        Autograph Collector
+    </title>
+    <link rel="stylesheet" href="homeStyle.css">
+</head>
 
 <body>
-    <div class="header">
-         <img src="home_screen.jpg" alt="Home Screen Image">
+    <header>
+        <a href="index.html"> <img src="logo.png" alt="logo" class="logo" width="100px"> </a>
+        <div class="container">
+        
+            <nav> 
+                <ul>
+                    <li><a href="login.html">Log-in/ Sign-up </a></li>
+                    <li><a href="Documentatie.html"> Documentatie </a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div class="main-content">
+        <img src="home_screen.jpg" alt="Home Screen Image">
+        <h1> Autograph Collector </h1>
+        <p> The place where you post, see and sell autographs. </p>
     </div>
-    <div class="main">
-            <h1> Autograph Collector </h1>
-            <p> The place where you post, see and sell autographs. </p>
-            <button onclick="window.location.href = 'login.html';">Go to login page</button>
-    </div>
+
     <div class="footer">
         <footer>
             <p> Authors: Dima Mihai, Iacob Denisa, Jitarasu Catalina </p>
             <p> &copy; 2022 </p>
-        </footer>        
+        </footer>
     </div>
-    
-
 </body>
+
 </html>
