--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 <body>
     <header>
-        <a href="index.html"> <img src="logo.png" alt="logo" class="logo" width="100px"> </a>
+        <a href="index.html"> <img src="logo.png" alt="logo" class="logo"  width="7%"> </a>
         <div class="container">
-        
             <nav> 
                 <ul>
                     <li><a href="login.html">Log-in/ Sign-up </a></li>
@@ -26,7 +25,7 @@
     </header>
 
     <div class="main-content">
-        <img src="home_screen.jpg" alt="Home Screen Image">
+        <img src="home_screen.jpg" alt="Home Screen Image" style="max-width:90%;height:auto;">
         <h1> Autograph Collector </h1>
         <p> The place where you post, see and sell autographs. </p>
     </div>
