--- a/Documentatie.html
+++ b/Documentatie.html
@@ -28,7 +28,7 @@
               <meta property="schema:additionalName" content="Alexandru">
               <meta property="schema:familyName" content="Dima">
               <span property="schema:name">Dima Mihai Alexandru</span>
-              <a href="#note1" property="sa:roleAction" resource="#note1" rel="footnote">1</a>
+              <a href="#note1" property="sa:roleAction" resource="#note1" rel="footnote"></a>
             </span>
             <ul>
               <li property="schema:roleContactPoint" typeof="schema:ContactPoint">
@@ -44,7 +44,7 @@
               <meta property="schema:additionalName" content="Alexandra">
               <meta property="schema:familyName" content="Iacob">
               <span property="schema:name">Iacob Denisa Alexandra</span>
-              <a href="#note1" property="sa:roleAction" resource="#note1" rel="footnote">2</a>
+              <a href="#note1" property="sa:roleAction" resource="#note1" rel="footnote"></a>
             </span>
             <ul>
               <li property="schema:roleContactPoint" typeof="schema:ContactPoint">
@@ -60,12 +60,12 @@
               <meta property="schema:additionalName" content="Larisa">
               <meta property="schema:familyName" content="Jitarasu">
               <span property="schema:name">Jitarasu Catalina Larisa</span>
-              <a href="#note1" property="sa:roleAction" resource="#note1" rel="footnote">3</a>
+              <a href="#note1" property="sa:roleAction" resource="#note1" rel="footnote"></a>
             </span>
             <ul>
               <li property="schema:roleContactPoint" typeof="schema:ContactPoint">
-                <a href="mailto:jholland@umich.edu"
-                   property="schema:email">jholland@umich.edu</a>
+                <a href="mailto:catalina.jitarasu@info.uaic.ro"
+                   property="schema:email">catalina.jitarasu@info.uaic.ro</a>
               </li>
             </ul>
           </li>
@@ -144,7 +144,7 @@
       <h3>2.6 Documentatia utilizatorului</h3>
       <p>Nu va fi nevoie de un manual de utilizare al aplicatiei, aceasta fiind destul de interactiva si intuitiva. </p>
       <h3>2.7 Ipoteze si dependente</h3>
-      <p>??</p>
+      <p></p>
     </section>
 </section>
 <section id="external-interface-requirments" role="app-interface">
@@ -167,7 +167,7 @@
 
 <section id="system-features" role="app-features">
   <h2>Caracteristicile sistemului</h2>
-  <p>To be implemented</p>
+  <p>Vor fi adaugate in momentul in care vom incepe partea de back-end.</p>
 </section>
 
 <section id="other-nonfunctional-requirments" role="app-requirments">
