--- a/Home/index.html
+++ b/Home/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav> 
                 <ul>
-                    <li><a href="login.html">Log-in/ Sign-up </a></li>
+                    <li><a href="../Login and sign-up/login.html">Log-in/ Sign-up </a></li>
                     <li><a href="Documentatie.html"> Documentatie </a></li>
                 </ul>
             </nav>
