--- a/Login and sign-up/login.html
+++ b/Login and sign-up/login.html
@@ -14,7 +14,7 @@
                 <button type="button" class="toggle-btn" onclick="register()">Register</button>
              </div>
              <div class="social-icons">
-                <img src="logo.png">
+                <img src="../Home/logo.png">
             </div>
             <form id="login" class="input-group">
                 <input type="text" class="input-field" placeholder="User Id" required> 
@@ -50,11 +50,11 @@
         }
         function reg()
         {
-           location.href="autographCollector.html";
+           location.href="../Main/autographCollector.html";
         }
         function log()
         {
-            location.href="autographCollector.html";
+            location.href="../Main/autographCollector.html";
         }
     </script>
 </body>
