--- a/Main/autographCollector.html
+++ b/Main/autographCollector.html
@@ -6,27 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Autograph Collector</title>
-<link rel="stylesheet" href="stylepg.css" >
+<link rel="stylesheet" href="styleMain.css" >
 </head>
 <body>
 
 <nav>
     <div class="nav-left"> 
-        <img src="images/logo.png" class="logo">
+        <img src="../images/logo.png" class="logo">
         <ul>
-            <li><img src="images/notificari.png"></li>
+            <li><img src="../images/notificari.png"></li>
            <!-- <li><img src="images/myaccount.jpg"></li> -->
-            <li><img src="images/home.png" onclick="window.location.href = 'autographCollector.html';"></li>
+            <li><img src="../images/home.png" onclick="window.location.href = 'autographCollector.html';"></li>
         </ul>
     </div>
     <div class="nav-right">
          <div class="search-box">
-              <img src="images/search.png">
+              <img src="../images/search.png">
               <input type="text" placeholder="Search">
          </div>
 
          <div class="nav-user-icon" onclick="menuSettings()">
-             <img src="images/myaccount.jpg">
+             <img src="../images/myaccount.jpg">
          </div>
     </div>
 
@@ -34,13 +34,13 @@
     <div class="settings-menu">
         <div class="settings-menu-inner">
           <div class="user-profile">
-              <img src="images/seeAccount.png" class="seeAcount-icon" >
+              <img src="../images/seeAccount.png" class="seeAcount-icon" >
               <a href="#" onclick="window.location.href = 'myAccount.html';">See your profile</a>
           </div>
           <hr>
           <div class="settings-links">
-              <img src="images/logout.png" class="logout-icon">
-              <a href="#" onclick="window.location.href = 'login.html';">Logout <img src="images/arrow.png" width="6px"></a>
+              <img src="../images/logout.png" class="logout-icon">
+              <a href="#" onclick="window.location.href = 'login.html';">Logout <img src="../images/arrow.png" width="6px"></a>
           </div>
         </div>
     </div>
@@ -51,9 +51,9 @@
     <!------------------left-sidebar------------------->
      <div class="left-sidebar">
            <div class="imp-links">
-               <a href="#"><img src="images/marketplace.png"> Marketplace </a>
-               <a href="#"><img src="images/grup.png"> Group </a>
-               <a href="#"><img src="images/top.webp"> Ranking </a>
+               <a href="#"><img src="../images/marketplace.png"> Marketplace </a>
+               <a href="#"><img src="../images/grup.png"> Group </a>
+               <a href="#"><img src="../images/top.webp"> Ranking </a>
             </div>
      </div>
     <!------------------main-content------------------->
