--- a/MyAccount/myAccount.html
+++ b/MyAccount/myAccount.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Autograph Collector/Profile</title>
-<link rel="stylesheet" href="stylepg.css" >
+<link rel="stylesheet" href="styleMyAccount.css" >
 </head>
 <body>
 
