--- a/Main/homeBody.html
+++ b/Main/homeBody.html
@@ -32,18 +32,18 @@
                 <form action="../includes/logout.php" method="post">
                     <button type="submit" name="logout"> Logout <img src="../images/arrow.png" alt="Arrow-image"
                             width="6px">
+                    </button>
+                </form>
             </div>
         </div>
     </div>
 </nav>
-
 <div class="container">
     <!------------------left-sidebar------------------->
     <div class="left-sidebar">
         <div class="imp-links">
             <a href="#"><img src="../images/marketplace.png"> Marketplace </a>
-            <a href="#" onclick="window.location.href = '../Main/groups.php';"><img src="../images/grup.png"> Groups
-            </a>
+            <a href="#" onclick="window.location.href = '../Main/groups.php';"><img src="../images/grup.png"> Groups</a>
             <a href="#"><img src="../images/top.webp"> Ranking </a>
         </div>
     </div>
