--- a/Main/homeBody.html
+++ b/Main/homeBody.html
@@ -3,7 +3,7 @@
         <img src="../images/logo.png" class="logo">
         <ul>
             <li><img src="../images/notificari.png"></li>
-            <li><img src="../images/home.png" onclick="window.location.href = 'autographCollector.html';"></li>
+            <li><img src="../images/home.png" onclick="window.location.href = '../Main/autographCollector.php';"></li>
         </ul>
     </div>
     <div class="nav-right">
@@ -42,8 +42,8 @@
     <!------------------left-sidebar------------------->
     <div class="left-sidebar">
         <div class="imp-links">
-            <a href="#"><img src="../images/marketplace.png"> Marketplace </a>
+            <a href="#" onclick="window.location.href = '../Main/marketplace.php';"><img src="../images/marketplace.png"> Marketplace </a>
             <a href="#" onclick="window.location.href = '../Main/groups.php';"><img src="../images/grup.png"> Groups</a>
-            <a href="#"><img src="../images/top.webp"> Ranking </a>
+            <a href="#" onclick="window.location.href = '../Main/ranking.php';"><img src="../images/top.webp"> Ranking </a>
         </div>
     </div>
