--- a/Main/homeBody.html
+++ b/Main/homeBody.html
@@ -1,11 +1,12 @@
+
 <nav>
     <div class="nav-left">
-        <img src="../images/logo.png" class="logo">
+        <img src="../images/logo.png" class="logo" onclick="window.location.href = '../Main/autographCollector.php';">
         <ul>
-            <li><img src="../images/notificari.png"></li>
-            <li><img src="../images/home.png" onclick="window.location.href = '../Main/autographCollector.php';"></li>
+            <li><img src="../images/home.png" alt="home" onclick="window.location.href = '../Main/autographCollector.php';"></li>
         </ul>
-    </div>
+    </div> 
+
     <div class="nav-right">
         <div class="search-box">
             <img src="../images/search.png">
@@ -35,8 +36,9 @@
         </div>
     </div>
 </nav>
+
 <div class="container">
-    <!------------------left-sidebar------------------->
+    <!--left-sidebar-->
     <div class="left-sidebar">
         <div class="imp-links">
             <a href="#" onclick="window.location.href = '../Main/marketplace.php';"><img src="../images/marketplace.png"> Marketplace </a>
