--- a/Home/Documentatie.html
+++ b/Home/Documentatie.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>Documentatie</title>
+    <link rel="stylesheet" href="documentatieStyle.css">
 </head>
 
 <body>
     <article resource="#" typeof="schema:ScholarlyArticle">
         <header>
-          <h1 property="schema:name">Autograph Collector</h1>
+          <h2 property="schema:name">Autograph Collector</h2>
           <!-- <p role="doc-subtitle" property="schema:alternateName">
-            The Future of the Scientific Method
+            The Future of the Scientific Method.
           </p> -->
         </header>
         <meta property="schema:accessibilityFeature" content="alternativeText">
@@ -18,6 +19,50 @@
         <meta property="schema:accessibilityHazard" content="noFlashingHazard">
       </article>
 
+      <div role="contentinfo">
+        <ul>
+          <li><a href="#revizuiri">Revizuiri</a></li>
+            <li><a href="#introduction"> Introducere</a>
+            <ul>
+              <li><a href="#scop1"><span>1.1 </span>Scop </a></li>
+              <li><a href="#conventii1"><span>1.2 </span>Convențiile documentului</a></li>
+              <li><a href="#publicul1"><span>1.3 </span>Publicul vizat</a>
+              <li><a href="#domeniul1"><span>1.4 </span>Domeniul de aplicare al produsului</a>
+              <li><a href="#referinte1"><span>1.5 </span>Referințe</a></li>
+              </ul>
+          </li>
+          <li><a href="#ovarall-description">Descrierea generala a aplicației</a>
+            <ul>
+              <li><a href="#perspectiva2"><span>2.1 </span>Perspectiva produsului</a></li>
+              <li><a href="#functii2"><span>2.2 </span>Funcțiile produsului</a></li>
+              <li><a href="#caracteristici2"><span>2.3 </span>Clasele si caracteristicile utilizatorului</a></li>
+              <li><a href="#mediu-operare2"><span>2.4 </span>Mediul de operare</a></li>
+              <li><a href="#constrangeri2"><span>2.5 </span>Constrângeri de proiectare și implementare</a></li>
+              <li><a href="#documentatie2"><span>2.6 </span>Documentația utilizatorului</a></li>
+              <li><a href="#ipoteze2"><span>2.7 </span>Ipoteze și dependențe</a></li>
+            </ul>
+          </li>
+          <li><a href="#external-interface-requirments">Cerințe de interfață externă</a>
+            <ul>
+              <li><a href="#interfata-utilizator3"><span>3.1 </span>Interfața cu utilizatorul</a></li>
+              <li><a href="#interfata-hardwere3"><span>3.2 </span>Interfețe hardwere</a></li>
+              <li><a href="#interfata-softwere3"><span>3.3 </span>Interfețe softwere</a></li>
+              <li><a href="#interfata-comunicare3"><span>3.4 </span>Interfețe de comunicare</a></li>
+            </ul>
+          </li>
+          <li><a href="#system-features">Caracteristicile sistemului</a></li>
+          <li><a href="#other-nonfunctional-requirments">Alte cerințe</a>
+            <ul>
+              <li><a href="#performanta5"><span>5.1 </span>Cerințe de performanță</a></li>
+              <li><a href="#siguranta5"><span>5.2 </span>Cerințe de siguranță în cadrul aplicației</a></li>
+              <li><a href="#securitate5"><span>5.3 </span>Cerințe de securitate</a></li>
+              <li><a href="#calitate5"><span>5.4 </span>Atribute de calitate software</a></li>
+            </ul>
+          </li>
+          <li><a href="#AppendixA">Anexa A</a></li>
+        </ul>
+
+<!-- ----------------------------------------- -->
 <div>
     <section typeof="sa:AuthorsList">
         <h2>Authors</h2>
@@ -72,53 +117,62 @@
         </ul>
       </section>
 </div>
-
+<section id="revizuiri">
+  <h2>Istoricul revizuirilor</h2>
+</section>
 <section id="introduction" role="doc-introduction">
-  <!-- review? -->
-  <h2>1. Introducere</h2>
-    <section id="sections1" role="doc-introduction-sections">
+  <h2>Introducere</h2>
+    <section id="scop1">
       <h3>1.1 Scop</h3>
-      <p>Acest document a fost creat cu rolul de a oferi informatii despre proiectul "Autograph Collector", realizat in materiei Tehnologii WEB, Facultatea de Informatica, 2022.</p> 
-    
+      <p>Acest document a fost creat cu scopul de a oferi informatii ale proiectului "Autograph Collector", 
+        realizat în anul 2022, în cadrul disciplinei Tehnologii WEB de la Facultatea de Informatică Iași.
+      </p> 
+    </section>
+    <section id="conventii1">
       <h3>1.2 Conventii ale documentului</h3>
-      <p>Va urma...</p>
-
+      <p>
+        Pentru realizarea acestei documentații s-a utilizat formatul <a href="https://w3c.github.io/scholarly-html/#abstract">Scholarly HTML</a>, conform cerințelor proiectului.
+      </p>
+    </section>
+    <section id="publicul1">
       <h3>1.3 Publicul vizat</h3>
-      <p>Documentul este destinat profesorilor ce vor evalua acest proiect impreuna cu functionalitatile lui, dar si oricarei persoane interesate de constructia aplicatiei.</p>
-
+      <p>Documentul este destinat profesorilor ce vor evalua acest proiect împreuna cu functionalitatile lui, 
+        dar si oricarei persoane interesate de constructia aplicatiei sau de modul de funcționare.</p>
+    </section>
+    <section id="domeniul1">
       <h3>1.4 Domeniul de aplicare al produsului</h3>
-      <p>Aplicatia WEB "Autograph Collector" are scopul de a crea o interfata digitala, usor de folosit de catre toti utilizatorii, iar cei interesati sa isi poata 
-        stoca autografele obtinute in diferite circumstante si de la diferite personalitati (scriitori, vedete, etc.) si care ulterior vor fi sortate pe categorii pentru a simplifica cautarile.
-        O alta facilitate a aplicatiei este marketplace-ul in care cine doreste isi pot pune in vanzare autografele sau poate cumpara altele.</p>
-
+      <p>Aplicatia WEB "Autograph Collector" are scopul de a crea o interfata digitala, usor de folosit de catre toti utilizatorii, 
+        iar cei interesați să își poata stoca autografele obținute in diferite circumstanțe și de la diferite personalitați (scriitori, vedete, etc.) 
+        și care ulterior vor fi sortate pe categorii pentru a simplifica căutarea.
+        O altă facilitate a aplicației este marketplace-ul, in cadrul căruia, cine dorește, poate face schimb de autografe cu alți utilizatori ai aplicațieie.
+      </p>
+    </section>
+    <section id="referinte1">
       <h3>1.5 Referinte</h3>
-      <p>Va urma...</p>
+      <p>
+        Cerința proiectului 
+        <a href="https://docs.google.com/document/d/e/2PACX-1vSr1vBKPHRrRGim-ygEE5DNtI4DKuVVC_C5QJuataA5N59_6r2CnoB58h2FPyGIVPpFxnqJoS_NEQEi/pub#h.3tsnkp8gr6c5">
+          Autograph Collector</a>
+      </p>
+      <p>Formatul <a href="https://w3c.github.io/scholarly-html/#abstract">Scholarly HTML</a>
+      </p>
+      <p>
+        Template utilizat <a href="https://github.com/rick4470/IEEE-SRS-Tempate#41-system-feature-1"> IEEE System Requirements Specification Template</a>
+      </p>
     </section>
 </section>
 <section id="ovarall-description" role="app-description">
-  <h2>Descrierea de ansamblu a aplicatiei</h2>
-    <section id="sections2" role="overall-description-sections">
+  <h2>Descrierea generala a aplicatiei</h2>
+    <section id="perspectiva2">
       <h3>2.1 Perspectiva produsului</h3>
-      <p>'Autograph Collector' este o aplicatie gandita sa ruleze pe browsere, avand ca scop conectarea intr-o retea a colectionarilor de autografe.</p>
-      <br> Aplicația se va deschide într-o pagină de prezentare, de unde putem accesa pagina de login/register, unde se face va face autentificarea.
-          Verificarea datelor introduse de către persoane, se va face cu ajutorul unei baze de date în care vor fi stocate datele tuturor utilizatorilor înregistrați. 
-          Dacă datele introduse la login vor fi corecte, vom ajunge pe pagina principală a aplicației.</p>
-          <p>Bara de activități a paginii principale conție: </p>
-          <ul>
-            <li>un buton de vizualizare notificări</li>
-            <li> un buton de home ce ne va întoarce la pagina principală</li>
-            <li> o bară de căutare </li>
-            <li> o pictogramă my account care va deschide un alt meniu de unde putem vizualiza profilul, sau putem face logout.</li>
-          </ul>
-          <p>Meniul din stânga paginii principale conține:</p>
-          <ul>
-            <li>Marketplace - unde vom putea regăsi toate autografele ce pot fi cumpărate</li>
-            <li>Group - aici putem accesa toate autografele pe categorii (ex:sport, politică) </li>
-            <li>Ranking - oferă un clasament pe categorii al autografelor</li>
-          </ul>
-          <p>Pe profilul personal vom putea vedea toate autografele postate.</p>
-          <p>Pentru a încadra un autograf postat la o categorie ne vom folosi de niște tag-uri, ce utilizatorul va trebui să le pună în momentul 
-            în care va realiza postarea. Toate postările vor fi stocate într-o bază de date. </p>
+      <p>'Autograph Collector' este o aplicatie gandita sa ruleze pe browsere, avand ca scop conectarea intr-o retea a colectionarilor 
+          de autografe. 
+      </p> 
+      <p>
+         O diagrama a aplicației se paote regăsi în cadrul secțiunii <a href="#AppendixA"> Anexa A</a>
+      </p>
+    </section>
+    <section id="functii2">
       <h3>2.2 Functiile produsului </h3>
       <div>
         <p>Utilizatorul va avea urmatoarele functionalitati in cadrul aplicatiei:</p>
@@ -127,41 +181,91 @@
           <li> să se conecteze la un cont deja existent;</li>
           <li> să posteze noi autografe;</li>
           <li> să șteargă autografe; </li>
-          <li> să vândă autografe;</li>
-          <li> să cumpere autografe;</li>
-          <li>să vizualizeze autografe postate de către alți utilizatori;</li>
-          <li>să descarce în format RSS, CSV si PDF clasamente ale autografelor pe categorii.</li>
+          <li> să facă schimb de autografe cu alți utilizatori;</li>
+          <li> să vizualizeze autografe postate de către alți utilizatori;</li>
+          <li> să caute autografe după anumite tag-uri</li>
+          <li>să descarce în format RSS, CSV si PDF rapoarte și clasamente ale autografelor pe categorii.</li>
         </ul>
       </div>
+    </section>
+    <section id="caracteristici2">
       <h3>2.3 Clasele si caracteristicile utilizatorilor </h3>
-      <p> Aplicatia este destinata oricarei persoane va fi interesanta, insa principalii utilizatori anticipam ca vor fi colectionarii de autografe.
-        Un utilizator nu trebuie sa indeplineasca anumite caracteristici pentru a putea folosi platforma, putand fi folosita si doar in scop informativ, fara a fi fortati sa aiba propriile postari.
+      <p> Aplicatia este destinata oricarei persoane ce va fi interesată, însă principalii utilizatori anticipăm că vor fi colectionarii de autografe.
+        Un utilizator nu trebuie sa îndeplinească anumite caracteristici pentru a putea folosi platforma, aceasta poate fi folosita și doar în scop informativ, 
+        fară a fi forțați să aibă propriile postări.
         </p>
+    </section>
+    <section id="mediu-operare2">
       <h3>2.4 Mediul de operare</h3>
       <p>Aplicatia va fi disponibila atat pe dispozitive de tip desktop cat si dispozitive mobile, in orice browser ce suporta HTML5. </p>
+    </section>
+    <section id="constrangeri2">
       <h3>2.5 Constrangeri de proiectare si implementare</h3>
-      <p>Aplicatia este construita de la 0, fara utilizarea vreunui framework, utilizand doar cod HTML, CSS, JavaScript, PHP.</p>
+      <p>Aplicatia este construita de la 0, fara utilizarea vreunui framework, utilizand doar cod HTML, CSS, JavaScript și PHP.</p>
+    </section>
+    <section id="documentatie2">
       <h3>2.6 Documentatia utilizatorului</h3>
-      <p>Nu va fi nevoie de un manual de utilizare al aplicatiei, aceasta fiind destul de interactiva si intuitiva. </p>
+      <p>Nu va fi nevoie de un manual de utilizare al aplicatiei și nici de tutoriale, aceasta fiind destul de interactivă și intuitivă. </p>
+    </section>
+    <section id="ipoteze2">
       <h3>2.7 Ipoteze si dependente</h3>
-      <p></p>
+      <p>
+        Singurul factor de care depinde aplicația pentru o bună utilizare este conexiunea la o sursă de internet.
+        Formatul CSV al topurilor si rapoartelor depinde de memoria dispozitivului deoarece acesta este disponibil doar prin descărcare.
+      </p>
     </section>
 </section>
 <section id="external-interface-requirments" role="app-interface">
   <h2>Cerinte de interfata externa</h2>
-  <section id="sections3" role="external-interface-requirments-sections">
+  <section id="interfata-utilizator3" role="external-interface-requirments-sections">
     <h3>3.1 Interfata cu utilizatorul</h3>
-    <p> Prima pagina este una introductiva, in care familiarizam utilizatorul cu scopul aplicatiei. In aceasta pagina vom avea un buton care 
-      ne va duce in pagina de login/ sign-up.</p>
+    <p> Prima pagina este una introductivă, în care familiarizăm utilizatorul cu scopul aplicației. În aceasta pagina vom avea două butoane care 
+      ne vor redirecționa în pagina de login/ sign-up, respectiv către această documentație.</p>
     <p> Pagina de login ofera utilizatorului optiunea de a se conecta sau de a crea un cont nou. </p>
     <p> Dupa conectare, utilizatorul este redirectionat in pagina principală, de aici avand posibilitatea de a alege unde dorește să navigheze, folosindu-se
         de meniu,dar și de bara de activități.</p>
-    <h3>3.2 Interfete hardware</h3>
-    <p> Urmarim ca programul sa functioneze pe orice sistem( desktop, mobile).</p>
+    <p>Bara de activități a paginii principale conție: </p>
+        <ul>
+          <li> logo-ul aplicației</li>
+          <li> un buton de home ce ne va întoarce la pagina principală</li>
+          <li> o bară de căutare </li>
+          <li> o pictogramă my account care va deschide un alt meniu de unde putem vizualiza profilul, sau putem face logout.</li>
+        </ul>
+        <p>Meniul din stânga paginii principale conține:</p>
+        <ul>
+           <li>Marketplace - unde vom putea regăsi toate autografele propuse pentru schimburi</li>
+           <li>Group - aici putem accesa toate autografele pe categorii (ex:sport, politică) </li>
+           <li>Ranking - oferă clasamente pe domenii ale autografelor, dar și rapoarte ale numărului de autografe</li>
+        </ul>
+          <p>Pe profilul personal vom putea vedea toate autografele proprii postate, cât și pe cele primite la schimb.</p>
+          <p>Pentru a încadra un autograf postat la o categorie ne vom folosi de un formular, aflat în profil, pe care utilizatorul în va completa 
+            în momentul în care va realiza postarea. Toate postările vor fi stocate într-o bază de date. 
+          </p>
+  </section>
+  <section id="interfata-hardwere3"> 
+    <h3 >3.2 Interfete hardware</h3>
+    <p> Urmarim ca programul sa functioneze pe orice sistem desktop sau mobile, unul din factorii ce fac acest lucru posibil fiind 
+      doar dependența conexiunii la internet . 
+    </p> 
+    <p>
+       În scopul utilizării mobile am realizat o interfață responsive, cu un meniu special conceput pentru dispozitivele mobile.  
+    </p>
+  </section>
+  <section id="interfata-softwere3">
     <h3>3.3 Interfete software</h3>
-    Urmarim ca programul sa functioneze pe orice sistem de operare( Linux, MacOS, iOS, Android).
+    Urmarim ca programul sa functioneze pe orice sistem de operare cum ar f: Linux, MacOS, iOS, Android.
+    Aplicația folosește o conexiune la o bază de date MySQL pentru păstrarea tuturor informațiilor necesare cum ar fi cele legate 
+    de autografele colectate, dar și informatiile utilizatorilor. Toate paginile sunt realizate cu ajutorul: HTML, CSS, JavaScript și PHP. 
+  </section>
+  <section id="interfata-comunicare3">
     <h3>3.4 Interfete de comunicare</h3>
-    <p> Luam in considerare confirmarea contului prin e-mail, resetarea parolei folosind e-mailul.</p>
+    <p> 
+      Aplicația functionează pe un browser WEB, deci bineînțeles că are nevoie de o conexiune la internet pentru funcționare.
+      Pentru a putea avea acces la funcționalitățile aplicațieie trbuie ca mai întâi să ne înregistrăm. 
+      Pentru înregistrare va trebui să furnizăm următoarele date personale: nume și prenume, adresă de email și o parolă. 
+      Aceste informații vor fi stocate criptat, într-o bază de date MySQL. 
+      Adresa de email și parola sunt necesare pentru accesul în cont la login.
+    </p>
   </section>
 </section>
 
@@ -172,16 +276,28 @@
 
 <section id="other-nonfunctional-requirments" role="app-requirments">
   <h2>Alte cerinte</h2>
-  <section id="sections5" role="other-nonfunctional-requirments-sections">
+  <section id="performanta5" role="other-nonfunctional-requirments-sections">
     <h3>5.1 Cerinte de performanta</h3>
     <p> Pentru o buna functionare a aplicatie este nevoie de o conexiune stabila la internet. </p>
+  </section>
+  <section id="siguranta5">
     <h3>5.2 Cerinte de siguranta in cadrul aplicatiei </h3>
     <p>  </p>
+  </section>
+  <section id="securitate5">
     <h3>5.3 Cerinte de securitate </h3>
     <p>Este recomandat ca utilizatorii sa isi creeze parole puternice, sa nu reutilizeze parole de pe alte site-uri/ aplicatii.</p>
+  </section>
+  <section id="calitate5">
     <h3>5.4 Atribute de calitate software </h3>
     <p> </p>
   </section>
+</section>
+
+<section id="AppendixA" role="analysis-models">
+  <h2>Anexa A</h2>
+  <h3>Diagrama UML</h3>
+
 </section>
 
 </body>
