--- a/Main/logged-menu.html
+++ b/Main/logged-menu.html
@@ -1,5 +1,5 @@
 <div class='user-profile'>
-    <img src='../images/seeAccount.png' class='seeAcount-icon'>
+    <img src='../images/seeAccount.png' alt="account" class='seeAcount-icon'>
     <a href='#' onclick="window.location.href='../MyAccount/myAccount.php';">See your profile</a>
 </div>
 <hr>
