--- a/Main/homeBody.html
+++ b/Main/homeBody.html
@@ -1,7 +1,7 @@
 
 <nav>
     <div class="nav-left">
-        <img src="../images/logo.png" class="logo" onclick="window.location.href = '../Main/autographCollector.php';">
+        <img src="../images/logo.png" alt="logo" class="logo" onclick="window.location.href = '../Main/autographCollector.php';">
         <ul>
             <li><img src="../images/home.png" alt="home" onclick="window.location.href = '../Main/autographCollector.php';"></li>
         </ul>
@@ -9,20 +9,21 @@
 
     <div class="nav-right">
         <div class="search-box">
-            <img src="../images/search.png">
+            <img src="../images/search.png" alt="serch">
             <input type="text" placeholder="Search">
             <!--ajax cautare autografe dupa nume domeniu/nume autor -->
         </div>
 
         <div class="nav-user-icon" onclick="menuSettings()">
-            <img src="../images/myaccount.jpg">
+            <img src="../images/myaccount.jpg" alt="account">
         </div>
+
     </div>
 
-    <!-------------settings-menu----------------->
+    <!-- settings-menu -->
     <div class="settings-menu">
         <div class="settings-menu-inner">
-            <img src='../images/seeAccount.png' class='seeAcount-icon'>
+            <img src='../images/seeAccount.png' alt="myAccount" class='seeAcount-icon'>
             <a href='#' onclick="window.location.href='../MyAccount/myAccount.php';">See your profile</a>
         </div>
         <hr>
@@ -30,7 +31,7 @@
             <img src='../images/logout.png' alt='Logout-image' class='logout-icon'>
             <!--a href='#' onclick=\"window.location.href = '../LoginAndSign-up/login.php';\">Logout <img src='../images/arrow.png' width='6px'></a-->
             <form action='../includes/logout.php' method='post'>
-                <button type='submit' name='logout'> Logout <img src='../images/arrow.png' alt='Arrow-image' width='6px'>
+                <button type='submit' name='logout'> Logout <img src='../images/arrow.png' alt='Arrow-image' style="width:6px;">
                 </button>
             </form>
         </div>
@@ -41,8 +42,8 @@
     <!--left-sidebar-->
     <div class="left-sidebar">
         <div class="imp-links">
-            <a href="#" onclick="window.location.href = '../Main/marketplace.php';"><img src="../images/marketplace.png"> Marketplace </a>
-            <a href="#" onclick="window.location.href = '../Main/groups.php';"><img src="../images/grup.png"> Groups</a>
-            <a href="#" onclick="window.location.href = '../Main/ranking.php';"><img src="../images/top.webp"> Ranking </a>
+            <a href="#" onclick="window.location.href = '../Main/marketplace.php';"><img src="../images/marketplace.png" alt="marketplace"> Marketplace </a>
+            <a href="#" onclick="window.location.href = '../Main/groups.php';"><img src="../images/grup.png" alt="group"> Groups</a>
+            <a href="#" onclick="window.location.href = '../Main/ranking.php';"><img src="../images/top.webp" alt="ranking"> Ranking </a>
         </div>
     </div>
