--- a/Main/homeBody.html
+++ b/Main/homeBody.html
@@ -1,11 +1,10 @@
-
 <nav>
     <div class="nav-left">
         <img src="../images/logo.png" alt="logo" class="logo" onclick="window.location.href = '../Main/autographCollector.php';">
         <ul>
             <li><img src="../images/home.png" alt="home" onclick="window.location.href = '../Main/autographCollector.php';"></li>
         </ul>
-    </div> 
+    </div>
 
     <div class="nav-right">
         <div class="search-box">
@@ -42,8 +41,8 @@
     <!--left-sidebar-->
     <div class="left-sidebar">
         <div class="imp-links">
-            <a href="#" onclick="window.location.href = '../Main/marketplace.php';"><img src="../images/marketplace.png" alt="marketplace"> Marketplace </a>
-            <a href="#" onclick="window.location.href = '../Main/groups.php';"><img src="../images/grup.png" alt="group"> Groups</a>
-            <a href="#" onclick="window.location.href = '../Main/ranking.php';"><img src="../images/top.webp" alt="ranking"> Ranking </a>
+            <a href="#" onclick="window.location.href = 'marketplace.php';"><img src="../images/marketplace.png" alt="marketplace"> Marketplace </a>
+            <a href="#" onclick="window.location.href = 'groups.php';"><img src="../images/grup.png" alt="group"> Groups</a>
+            <a href="#" onclick="window.location.href = 'ranking.php';"><img src="../images/top.webp" alt="ranking"> Ranking </a>
         </div>
     </div>
