--- a/Main/homeBody.html
+++ b/Main/homeBody.html
@@ -6,33 +6,33 @@
         </ul>
     </div>
 
+    <script>
+        let content = document.getElementById("search-result");
+
+        function showResult(x) {
+            if (x.length == 0) {
+                document.getElementById("search-result").innerHTML = "null";
+            } else {
+                var xmlhttp = new XMLHttpsRequest();
+                xmlhttp.onreadystatechange = function() {
+                    if (this.readyState == 4 && this.status == 200) {
+                        document.getElementById("search-result").innerHTML = this.responseText;
+                    }
+                };
+                xmlhttp.open("GET", "../includes/search.php?name=" + x, true);
+                xmlhttp.send();
+            }
+        }
+    </script>
+
     <div class="nav-right">
         <div class="search-box">
-            <img src="../images/search.png" alt="serch">
-            <input type="text" onkeyup="imu(this.value)" placeholder="Search">
+            <img src="../images/search.png" alt="search">
+            <form>
+                <input type="text" onkeyup="showResult(this.value)" placeholder="Search">
+            </form>
             <!--ajax cautare autografe dupa nume domeniu/nume autor -->
-            <div id="content">Result </div>
-            <script type="text/javascript" >
-                let contentT=document.getElementById('content');
-        
-                function imu(x){
-                    if(x.length==0){
-                        contentT.innerHTML='empty';
-                    }
-                    else
-                    {
-                        var XML=new XMLHttpsRequest();
-                        XML.onreadystatechange =function(){
-                            if(XML.readyState ==4 && XML.status==200){
-                                contentT.innerHTML =XML.responseText;
-                            }
-                        };
-         
-                       XML.open('GET','search.php?q='+x, true);
-                       XML.send();
-                    }
-                }
-            </script>
+
         </div>
 
         <div class="nav-user-icon" onclick="menuSettings()">
