--- a/Home/Documentatie.html
+++ b/Home/Documentatie.html
@@ -50,15 +50,51 @@
               <li><a href="#interfata-comunicare3"><span>3.4 </span>Interfețe de comunicare</a></li>
             </ul>
           </li>
-          <li><a href="#system-features">Caracteristicile sistemului</a></li>
-          <li><a href="#other-nonfunctional-requirments">Alte cerințe</a>
-            <ul>
-              <li><a href="#performanta5"><span>5.1 </span>Cerințe de performanță</a></li>
-              <li><a href="#siguranta5"><span>5.2 </span>Cerințe de siguranță în cadrul aplicației</a></li>
-              <li><a href="#securitate5"><span>5.3 </span>Cerințe de securitate</a></li>
-              <li><a href="#calitate5"><span>5.4 </span>Atribute de calitate software</a></li>
-            </ul>
-          </li>
+          <li>
+            <a href="#system_features">4. Caracteristicile sistemului</a>
+            <ol role="directory">
+                <li>
+                    <a href="#authentification">4.1 Autentificarea</a>
+                    <ol>
+                        <li><a href="#authentification1">4.1.1 Descriere &#351;i prioritate</a></li>
+                        <li><a href="#authentification2">4.1.2 Secven&#355;e de stimul/r&#259;spuns</a></li>
+                        <li><a href="#authentification3">4.1.3 Cerin&#355;e func&#355;ionale</a></li>
+                    </ol>
+                </li>
+                <li>
+                    <a href="#publishing">4.2 Publicarea email-urilor</a>
+                    <ol>
+                        <li><a href="#publishing1">4.2.1 Descriere &#351;i Prioritate</a></li>
+                        <li><a href="#publishing2">4.2.2 Secven&#355;e de stimul/r&#259;spuns</a></li>
+                        <li><a href="#publishing3">4.2.3 Cerin&#355;e func&#355;ionale</a></li>
+                    </ol>
+                </li>
+                <li>
+                    <a href="#view_content">4.3 Vizualizarea con&#355;inutului unui email</a>
+                    <ol>
+                        <li><a href="#view_content1">4.3.1 Descriere &#351;i Prioritate</a></li>
+                        <li><a href="#view_content1">4.3.2 Secven&#355;e de stimul/r&#259;spuns</a></li>
+                        <li><a href="#view_content1">4.3.3 Cerin&#355;e func&#355;ionale</a></li>
+                    </ol>
+                </li>
+                <li>
+                    <a href="#view_statistics">4.4 Vizualizarea statisticilor</a>
+                    <ol>
+                        <li><a href="#view_statistics1">4.4.1 Descriere &#351;i Prioritate</a></li>
+                        <li><a href="#view_statistics2">4.4.2 Secven&#355;e de stimul/r&#259;spuns</a></li>
+                        <li><a href="#view_statistics3">4.4.3 Cerin&#355;e func&#355;ionale</a></li>
+                    </ol>
+                </li>
+                <li>
+                    <a href="#delete_email">4.5 &#350;tergerea email-urilor</a>
+                    <ol>
+                        <li><a href="#delete_email1">4.5.1 Descriere &#351;i Prioritate</a></li>
+                        <li><a href="#delete_email2">4.5.2 Secven&#355;e de stimul/r&#259;spuns</a></li>
+                        <li><a href="#delete_email3">4.5.3 Cerin&#355;e func&#355;ionale</a></li>
+                    </ol>
+                </li>
+            </ol>
+        </li>
           <li><a href="#AppendixA">Anexa A</a></li>
         </ul>
 
